@@ -94,6 +94,18 @@ class BlueSnapTest < Test::Unit::TestCase
     response = stub_comms(@gateway, :raw_ssl_request) do
       @gateway.capture(@amount, @credit_card, @options)
     end.check_request do |method, url, data|
+      assert_not_match(/<amount>1.00<\/amount>/, data)
+      assert_not_match(/<currency>USD<\/currency>/, data)
+    end.respond_with(successful_capture_response)
+
+    assert_success response
+    assert_equal '1012082881', response.authorization
+  end
+
+  def test_successful_partial_capture
+    response = stub_comms(@gateway, :raw_ssl_request) do
+      @gateway.capture(@amount, @credit_card, @options.merge(include_capture_amount: true))
+    end.check_request do |method, url, data|
       assert_match(/<amount>1.00<\/amount>/, data)
       assert_match(/<currency>USD<\/currency>/, data)
     end.respond_with(successful_capture_response)
